--- a/sample/index.html
+++ b/sample/index.html
@@ -13,8 +13,8 @@
     <div id="canvas"></div>
   </body>
   <script type="module">
-    import initializeVnPlayer from './apply2.js'
+    import initializeVnPlayer from './sample/apply.js'
 
-    initializeVnPlayer( document.body, () => {})
+    initializeVnPlayer(document.body, () => {})
   </script>
-</html> 
+</html>
