--- a/sample/index.html
+++ b/sample/index.html
@@ -13,8 +13,7 @@
     <div id="canvas"></div>
   </body>
   <script type="module">
-    import initializeVnPlayer from './sample/apply.js'
-
-    initializeVnPlayer(document.body, () => {})
+    import initializeVnPlayer from './apply.js'
+    initializeVnPlayer(document.body, "/sample/vndata.data")
   </script>
 </html>
